# scraper_labs

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml  scrapy.cfg
Frontend/: mise.toml  nuxt.config.ts  package.json
Frontend/app/: app.vue
Frontend/src-tauri/: tauri.conf.json
Frontend/src-tauri/src/: main.rs
Image_Manipulation/: Countours.ipynb  Denoising.ipynb  Image_transformation.ipynb  Morphology.ipynb  testing.py  НТРПС_ПРАКТИКА_Работа_с_изображением.ipynb  Цветовые_пространства.ipynb
L1/: .gitignore  download_reviews.py
L2/: experiment.py  organize_dataset.py
L4/: experiments.py  iter.py
PR1/: experiments.ipynb
Server/: serve.py
spds/: items.py  middlewares.py  pipelines.py  settings.py
spds/spiders/: rev.py
