[project]
name = "scraper-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy",
    "scrapy-rotating-proxies-ng",
    "scrapy-ua-rotator",
    "fake-useragent",
    "marimo",
    "pandas",
    "polars",
    "jupyter",
    "pandas-stubs"
]
